--- a/front-end/src/components/Product/Product.module.css
+++ b/front-end/src/components/Product/Product.module.css
@@ -21,10 +21,10 @@
 	position: absolute;
 	top: 0.5rem;
 	left: 0.5rem;
-	width: 1.5rem;
-	height: 1.5rem;
+	width: 1.6rem;
+	height: 1.6rem;
 	background-image: url(../../assets/heart.svg);
-	background-repeat: none;
+	background-repeat: no-repeat;
 }
 
 .heart:hover {
